[package]
name = "hookdeck-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-server = "2.5.0"
actix-web = "4.9.0"
env_logger = "0.11.6"
eyre = "0.6.12"
futures = "0.3.31"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
